--- a/CMSLionel/Views/Home/Index.cshtml
+++ b/CMSLionel/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="page-header" style="text-align:center">
-<h1>Maersk Container Management System powered by Azure</h1> 
+<h1>Maersk Container Management System powered by Microsoft Azure</h1> 
 </div>
 
 <div class="carousel fade-carousel slide" data-ride="carousel" data-interval="4000" id="bs-carousel">
